--- a/hall seat trial/Theater - PVR.html
+++ b/hall seat trial/Theater - PVR.html
@@ -54,7 +54,7 @@
     <form class='form-inline selectionForm'>
 			<div class="form-group required">
 				<label for="name">Name:</label>
-				<input type="text" class="form-control" id='name' placeholder="Dukhyant" required="required"/>
+				<input type="text" class="form-control" id='name' placeholder="Jordush" required="required"/>
 			</div>
 			<style>
 				#name {margin-left: 80px; margin-bottom: 10px;  }
@@ -64,7 +64,7 @@
 			</style>
 			<div class="form-group required">
 				<label for="seats">Number Of Seats:</label>
-				<input type="number" id='seats' class="form-control" placeholder="3" required="required"/>
+				<input type="number" id='seats' class="form-control" placeholder="1-10" required="required"/>
 			</div>
 			<div class="text-center">
 				<button type="button" class="btn btn-primary btn-lg submitBtn" id="submitSelection">Start Selecting</button>
