Update Theater - IMAX - Chakra.html

--- a/hall seat trial/Theater - IMAX - Chakra.html
+++ b/hall seat trial/Theater - IMAX - Chakra.html
@@ -114,7 +114,7 @@
 			</table>
 
 			<div class="text-center">
-				<button type="button" class="btn btn-primary btn-lg submitBtn" id="confirmSelection">Confirm Selection</button>
+				<button type="button" class="btn btn-primary btn-lg submitBtn" id="confirmSelection" href="https://akshatgaur2.github.io/Practice/Movie%20-%20outlet%20BASIC%2090/TQ.html">Confirm Selection</button>
 				<div class="screen-map">
 				<label for="empty-seat-map">Selected Seat</label>
 				<img src="img/booked-seat.png" class="booked-seat-map" id="booked-seat-map">
