--- a/Movie outlet - basic-90/TQ.html
+++ b/Movie outlet - basic-90/TQ.html
@@ -57,7 +57,7 @@
         </article>
         <!-- ################################################################################################ -->
       </div>
-      <p><a href="javascript:history.go(-1)">Movie Selection</a> / <a href="#">Watch Classics Page</a></p>
+      <p><a href="javascript:history.go(-1)">Previous page</a> / <a href="#">Watch Classics Page</a></p>
       <!-- ####################################################################################################### -->
     </section>
     
