--- a/Movie outlet - basic-90/TQ.html
+++ b/Movie outlet - basic-90/TQ.html
@@ -21,10 +21,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery@202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -51,13 +51,13 @@
         <article>
           <footer>
             <ul class="nospace inline pushright">
-              <li><a class="btn inverse2"  href="#"> Form </a></li>
+              <li><a class="btn inverse2"  href="https://forms.gle/66YkjVpfVks5sedx6"> Form </a></li>
             </ul>
           </footer>
         </article>
         <!-- ################################################################################################ -->
       </div>
-      <p><a href="javascript:history.go(-1)">Previous page</a> / <a href="#">Watch Classics Page</a></p>
+      <p><a href="javascript:history.go(-1)">Previous page</a> / <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery@202.html">Watch Classics Page</a></p>
       <!-- ####################################################################################################### -->
     </section>
     
