--- a/Movie outlet - basic-90/TQ.html
+++ b/Movie outlet - basic-90/TQ.html
@@ -114,7 +114,7 @@
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://forms.gle/66YkjVpfVks5sedx6">Jordush</a></p>
   </footer>
 </div>
 </body>
