--- a/homepage - spourmo/pages/gallery 2.html
+++ b/homepage - spourmo/pages/gallery 2.html
@@ -199,7 +199,7 @@
       <!-- ################################################################################################ -->
       <nav>
         <ul class="nospace">
-          <li><a href="index.html"><i class="fas fa-lg fa-home"></i></a></li>
+          <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html"><i class="fas fa-lg fa-home"></i></a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Terms</a></li>
@@ -217,7 +217,7 @@
   <div class="wrapper row5">
     <div id="copyright" class="hoc clear"> 
       <!-- ################################################################################################ -->
-      <p class="fl_right">Copyright &copy; 2021 - All Rights Reserved - <a href="#">Jordush</a></p>
+      <p class="fl_right">Copyright &copy; 2021 - All Rights Reserved - <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></p>
       <!-- ################################################################################################ -->
     </div>
   </div>
