All the links have been updated

--- a/INOX Seat booking/Theater - INOX.html
+++ b/INOX Seat booking/Theater - INOX.html
@@ -15,7 +15,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>INOX : Seat booking</h2>
     </div>
     <form action="#" method="post">
@@ -27,10 +27,10 @@
     </form>
     <nav>
 		<ul>
-			<li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+			<li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
 			<li><a href="#">Plays/Dramas</a></li>
 			<li><a href="#">Change Location</a></li>
-			<li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+			<li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/gallery%202.html">Binge online</a></li>
 		</ul>
     </nav>
   </header>
@@ -40,7 +40,7 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\hall seat trial\images\Joker Poster.jpeg" alt="">
+      <figure><img src="https://akshatgaur2.github.io/Practice/hall%20seat%20trial/images/Joker%20Poster.jpeg" alt="">
         <figcaption>
           <h3 style="font-size: 30px;">Joker</h3>
           <p> Set in 1981, it follows Arthur Fleck, a failed clown and stand-up comedian whose descent into insanity and nihilism inspires a violent counter-cultural revolution against the wealthy in a decaying Gotham City</p>
@@ -54,7 +54,7 @@
     <form class='form-inline selectionForm'>
 			<div class="form-group required">
 				<label for="name">Name:</label>
-				<input type="text" class="form-control" id='name' placeholder="Dukhyant" required="required"/>
+				<input type="text" class="form-control" id='name' placeholder="Jordush" required="required"/>
 			</div>
 			<style>
 				#name {margin-left: 80px; margin-bottom: 10px;  }
@@ -64,7 +64,7 @@
 			</style>
 			<div class="form-group required">
 				<label for="seats">Number Of Seats:</label>
-				<input type="number" id='seats' class="form-control" placeholder="3" required="required"/>
+				<input type="number" id='seats' class="form-control" placeholder="1-10" required="required"/>
 			</div>
 			<div class="text-center">
 				<button type="button" class="btn btn-primary btn-lg submitBtn" id="submitSelection">Start Selecting</button>
