--- a/hall seat trial/Theater - IMAX - Chakra.html
+++ b/hall seat trial/Theater - IMAX - Chakra.html
@@ -114,7 +114,17 @@
 			</table>
 
 			<div class="text-center">
-				<button type="button" onclick="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html" class="btn btn-primary btn-lg submitBtn" id="confirmSelection" >Confirm Selection</button>
+				<div id="pageintro"> 
+					<!-- ################################################################################################ -->
+					<article>
+					<footer>
+						<ul class="nospace inline pushright">
+						<li><a class="btn2 inverse"  href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html" id="confirmSelection"> Confirm Selection </a></li>
+						</ul>
+					</footer>
+					</article>
+					<!-- ################################################################################################ -->
+				</div>
 				<div class="screen-map">
 				<label for="empty-seat-map">Selected Seat</label>
 				<img src="img/booked-seat.png" class="booked-seat-map" id="booked-seat-map">
