Update Theater - IMAX - Chakra.html

--- a/hall seat trial/Theater - IMAX - Chakra.html
+++ b/hall seat trial/Theater - IMAX - Chakra.html
@@ -119,7 +119,7 @@
 					<article>
 					<footer>
 						<ul class="nospace inline pushright">
-						<li><a class="btn2 inverse"  href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html" id="confirmSelection"> Confirm Selection </a></li>
+						<li><a class="btn2 inverse"  id="confirmSelection" href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html"> Proceed To Pay </a></li>
 						</ul>
 					</footer>
 					</article>
