--- a/hall seat trial/Theater - IMAX - Chakra.html
+++ b/hall seat trial/Theater - IMAX - Chakra.html
@@ -114,17 +114,7 @@
 			</table>
 
 			<div class="text-center">
-				<div id="pageintro"> 
-					<!-- ################################################################################################ -->
-					<article>
-					<footer>
-						<ul class="nospace inline pushright">
-						<li><a class="btn2 inverse"  id="confirmSelection" href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html"> Proceed To Pay </a></li>
-						</ul>
-					</footer>
-					</article>
-					<!-- ################################################################################################ -->
-				</div>
+				<button type="button" class="btn btn-primary btn-lg submitBtn" id="confirmSelection" onclick="window.open('https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/TQ.html')">Confirm Selection</button>
 				<div class="screen-map">
 				<label for="empty-seat-map">Selected Seat</label>
 				<img src="img/booked-seat.png" class="booked-seat-map" id="booked-seat-map">
