--- a/Movie outlet - basic-90/TQ.html
+++ b/Movie outlet - basic-90/TQ.html
@@ -21,10 +21,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery@202.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -57,7 +57,7 @@
         </article>
         <!-- ################################################################################################ -->
       </div>
-      <p><a href="javascript:history.go(-1)">Previous page</a> / <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery@202.html">Watch Classics Page</a></p>
+      <p><a href="javascript:history.go(-1)">Previous page</a> / <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Watch Classics Page</a></p>
       <!-- ####################################################################################################### -->
     </section>
     
