--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -36,8 +36,8 @@
     <!-- Slider -->
     <section id="slider" class="clear">
       <figure>
-        <iframe src="https://drive.google.com/file/d/1hiJ9pBnM8jhWT-MT52E-JH_JyxPgWoAx/preview" width="966" height="444" frameborder="0" allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      
+        <!-- <iframe src="https://drive.google.com/file/d/1hiJ9pBnM8jhWT-MT52E-JH_JyxPgWoAx/preview" width="966" height="444" frameborder="0" allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <iframe src="https://drive.google.com/file/d/1qR_JHciEy8qpRu9avVWVNzQ7NXN_0lgI/preview" width="640" height="480"allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
       </figure>
     </section>
     <!-- main content -->
