updated logo and footer

--- a/Movie outlet - basic-90/TQ.html
+++ b/Movie outlet - basic-90/TQ.html
@@ -9,7 +9,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>End Point</h2>
     </div>
     <form action="#" method="post">
@@ -114,7 +114,7 @@
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://forms.gle/66YkjVpfVks5sedx6">Jordush</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></p>
   </footer>
 </div>
 </body>
