--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -36,7 +36,7 @@
     <!-- Slider -->
     <section id="slider" class="clear">
       <figure>
-        <iframe src="https://drive.google.com/file/d/1hRftfr_wougSOeeyigvMfBBkPzUeYvxY/view?usp=sharing" width="966" height="444" frameborder="0" allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://drive.google.com/file/d/1hRftfr_wougSOeeyigvMfBBkPzUeYvxY/view" width="966" height="444" frameborder="0" allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </figure>
     </section>
     <!-- main content -->
