--- a/Movie outlet - basic-90/Classic movie player - Iron Man.html
+++ b/Movie outlet - basic-90/Classic movie player - Iron Man.html
@@ -35,10 +35,8 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><video width="966" height="444" controls>
-        <source src="https://drive.google.com/file/d/1hRftfr_wougSOeeyigvMfBBkPzUeYvxY/preview" >
-      Your browser does not support the video tag.
-      </video>
+      <figure>
+        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444" frameborder="0" allow="play; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </figure>
     </section>
     <!-- main content -->
