Update Book movie - Joker.html

--- a/Movie outlet - basic-90/Book movie - Joker.html
+++ b/Movie outlet - basic-90/Book movie - Joker.html
@@ -60,7 +60,7 @@
           <figure>
             <ul class="clear">
               <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Joaquin%20Phoenix.jpeg" title= "Joaquin Phoenix" width="130" height="130" alt ="Joaquin Phoenix"></a></li>
-              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Robert%20De%0Niro.jpeg" title= "Robert De Niro" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Robert.jpeg" title= "Robert De Niro" width="130" height="130" alt=""></a></li>
               <li class="last"><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Zazie%20Beetz.jpeg" title= "Zazie Beetz" width="130" height="130" alt=""></a></li>
             </ul>
             <figcaption><a href="https://www.imdb.com/title/tt7286456/">View All Cast &raquo;</a></figcaption>
